--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/website_icon.svg" />
+    <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/website_icon.png" />
     <link rel="alternate icon" href="%PUBLIC_URL%/website_icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
